update bully portfolio
update

--- a/index.html
+++ b/index.html
@@ -76,22 +76,22 @@
                         <div class="my-info-wrapper">
                             <div class="my-info">
                                 <p class="my-info-title">NAME</p>
-                                <p class="my-info-content">Amy Stone</p>
+                                <p class="my-info-content">Anusurya</p>
                             </div>
 
                             <div class="my-info">
                                 <p class="my-info-title">ROLE</p>
-                                <p class="my-info-content">Designer</p>
+                                <p class="my-info-content">Web Developer</p>
                             </div>
 
                             <div class="my-info">
                                 <p class="my-info-title">EMAIL</p>
-                                <p class="my-info-content"><a href="https://demo.cocobasic.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="2a595e45444f6a4f524b475a464f04494547">[email&#160;protected]</a></p>
+                                <p class="my-info-content"><a href="">anusurya151@gmail.com</a></p>
                             </div>
 
                             <div class="my-info">
                                 <p class="my-info-title">PHONE</p>
-                                <p class="my-info-content">(+987) 987 654 321</p>
+                                <p class="my-info-content">(+91) 811 39 5961</p>
                             </div>
 
                             <img class="my-info-signature" src="images/signature.png" alt="" />  
@@ -333,20 +333,12 @@
                                     <div class="one-half width-40 last">
                                         <h2 class="entry-title section-title">Cover letter</h2>
                                         <p class="section-info">
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra tristique placerat in massa consectetur quisque nunc fames.
+                                          
+                                            The opportunity to work with your company and fulfill this role is a fantastic opportunity
+                                            , and I feel that my education and recent job experience make me the ideal candidate for the
+                                             position.
                                         </p>
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra tristique placerat in massa consectetur quisque. Nunc ac fames lectus in libero aliquet.  Mauris egestas nulla arcu, ut vestibulum diam vulputate non. Ut massa mauris, condimentum ut tincidunt eu, mattis euismod dolor.
-                                        </p>
-                                        <p>
-                                            Faucibus sed tristique fames sed aliquet ultricies eget viverra arcu. Vitae faucibus diam consequat maecenas. Turpis metus sit diam purus leo in varius ac quam. Nunc amet tristique volutpat adipiscing vulputate phasellus. Volutpat faucibus sed condimentum aliquet mi, nec lobortis neque gravida tempor. Praesent vel commodo dolor, at vehicula turpis.
-                                        </p>
-
-                                        <p>
-                                            Phasellus non dui sed eros scelerisque gravida eu lobortis magna. Sed vulputate, lacus blandit posuere aliquet, enim purus dignissim nunc, at efficitur nulla lacus id quam. Morbi feugiat neque a quam viverra auctor. 
-                                        </p>                                        
-
-                                        <img class="my-signature" src="images/signature2.png" alt="">                                        
+                                                <img class="my-signature" src="images/signature2.png" alt="">                                        
                                     </div>
                                 </div>
                             </div>
@@ -464,7 +456,7 @@
                                         </p>
                                         <p>
                                             <b>ADDRESS:</b> Some Street 987, USA <br>
-                                            <b>EMAIL:</b> <a href="https://demo.cocobasic.com/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="4b2824263b2a25320b32243e392e262a222765282426">[email&#160;protected]</a> <br>
+                                            <b>EMAIL:</b> <a href="">anusurya151@gmail.com</a> <br>
                                             <b>WEBSITE:</b> www.yourwebsite.com <br>
                                         </p>
                                     </div>
