--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 
                                 <div class="social-links">
                                     <a href="#">LINKEDIN</a>
-                                    <a href="#">TWITTER</a>
-                                    <a href="#">INSTAGRAM</a>
+                                    <a href="https://github.com/anusuryaanu">GITHUB</a>
+                                    
                                 </div>
 
                             </div>                            
