--- a/index.html
+++ b/index.html
@@ -468,29 +468,23 @@
                                         <p>
                                             <b>ADDRESS:Deepalayam house,VELLARMALA</b>  <br>
                                             <b>EMAIL:</b> <a href="mailto:anusurya151@gmail.com">anusurya151@gmail.com</a> <br>
+                                            <b>PHONE NO:<a href="tel:8113959961 " >
+                                                (91)8113959961
+                                                </a></b>
                                            
                                         </p>
                                     </div>
-
-                                    <div class="one-half width-55 last">
-                                        <div class="contact-form">
-                                            <p>
-                                                <input id="name" type="text" name="your-name" placeholder="Name">
-                                            </p>
-                                            <p>
-                                                <input id="contact-email" type="email" name="your-email" placeholder="Email">
-                                            </p>                                    
-                                            <p>
-                                                <input id="subject" type="text" name="your-subject" placeholder="Subject">
-                                            </p>
-                                            <p>
-                                                <textarea id="message" name="your-message" placeholder="Message"></textarea>
-                                            </p>
-                                            <p class="contact-submit-holder">
-                                                <input type="submit" value="SEND">
-                                            </p>                                
-                                        </div> 
-                                    </div> 
+                                    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+                                    <a href="https://api.whatsapp.com/send?phone=918113959961&amp;text=Hi Anusurya Iam here to contact you on" class="float2" target="_blank">
+                                        <i class="fa fa-whatsapp my-float"></i>
+                                        </a>
+                                    <i class="fa fa-whatsapp my-float"></i>
+                                    </a>
+                                    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+                                    <a href="tel:8113959961" class="float2" target="_blank">
+                                    <i class="fa fa-phone my-float2"></i>
+                                    </a>
+                                  
                                 </div>
                             </div>
                         </div>
