--- a/index.html
+++ b/index.html
@@ -475,14 +475,14 @@
                                         </p>
                                     </div>
                                     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-                                    <a href="https://api.whatsapp.com/send?phone=918113959961&amp;text=Hi Anusurya Iam here to contact you on" class="float2" target="_blank">
+                                    <a href="https://api.whatsapp.com/send?phone=918113959961&amp;text=Hi Anusurya Iam here to contact you on" class="float" target="_blank">
                                         <i class="fa fa-whatsapp my-float"></i>
                                         </a>
                                     <i class="fa fa-whatsapp my-float"></i>
                                     </a>
                                     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
                                     <a href="tel:8113959961" class="float2" target="_blank">
-                                    <i class="fa fa-phone my-float2"></i>
+                                    <i class="fa fa-phone my-float"></i>
                                     </a>
                                   
                                 </div>
