--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 </div>
 
                             </div>                            
-                            <div class="home-right-part">                                
+                            <div  id="popup" class= "home-right-part popup panel panel-primary" >                                
                             </div>                            
                         </div>
                     </div>
